--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 	   <l<li><a href ="#con">Contact</a></li>
 	  </ul>
 	 
-      <img src="C:\Users\User\Downloads\17523180_930077090428741_5455649905521865346_n.jpg">
+      <img src="images\santosh.png">
 	  <p>Santosh Mehta </p>
 	  <div class="social-icons">
-						<a target='_blank' href='https://www.facebook.com/santosh.mehta.50'><img src='C:\Users\User\santoshsinghmehta.github.io\images\download.png' /></a>
-						<a target='_blank' href='https://www.linkedin.com/in/santosh-mehta-250120147/'><img src='C:\Users\User\santoshsinghmehta.github.io\images\download 3.jpg'/></a>
-						<a target='_blank' href='https://github.com/santoshsinghmehta'><img src='C:\Users\User\santoshsinghmehta.github.io\images\download 2.jpg' /></a>
+						<a target='_blank' href='https://www.facebook.com/santosh.mehta.50'><img src="images\download.png" alt="hi" class="inline"/></a>
+						<a target='_blank' href='https://www.linkedin.com/in/santosh-mehta-250120147/'><img src="images\download 3.jpg"/></a>
+						<a target='_blank' href='https://github.com/santoshsinghmehta'><img src="images\download 2.jpg" /></a>
 					</div>
 	 
        </header>
