--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <img src="images\santosh.png">
 	  <p>Santosh Mehta </p>
 	  <div class="social-icons">
-						<a target='_blank' href='https://www.facebook.com/santosh.mehta.50'><img src="images\download.png" alt="hi" class="inline"/></a>
+						<a target='_blank' href='https://www.facebook.com/santosh.mehta.50'><img src="images\download.png"/></a>
 						<a target='_blank' href='https://www.linkedin.com/in/santosh-mehta-250120147/'><img src="images\download 3.jpg"/></a>
 						<a target='_blank' href='https://github.com/santoshsinghmehta'><img src="images\download 2.jpg" /></a>
 					</div>
