--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <img src="images\santosh.png">
 	  <p>Santosh Mehta </p>
 	  <div class="social-icons">
-						<a target='_blank' href='https://www.facebook.com/santosh.mehta.50'><img src="images\download.png"/></a>
-						<a target='_blank' href='https://www.linkedin.com/in/santosh-mehta-250120147/'><img src="images\download 3.jpg"/></a>
-						<a target='_blank' href='https://github.com/santoshsinghmehta'><img src="images\download 2.jpg" /></a>
+						<a target='_blank' href='https://www.facebook.com/santosh.mehta.50'><img src="santoshsinghmehta.github.io/images\download.png"/></a>
+						<a target='_blank' href='https://www.linkedin.com/in/santosh-mehta-250120147/'><img src="santoshsinghmehta.github.io/images\download 3.jpg"/></a>
+						<a target='_blank' href='https://github.com/santoshsinghmehta'><img src="santoshsinghmehta.github.io/images\download 2.jpg" /></a>
 					</div>
 	 
        </header>
