--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
 	 
       <img src="santoshsinghmehta.github.io/images\santosh.png">
 	  <p>Santosh Mehta </p>
+	  
 	  <div>
-						<a target='_blank' href='https://www.facebook.com/santosh.mehta.50'><img src="santoshsinghmehta.github.io/images\download.png"/></a>
-						<a target='_blank' href='https://www.linkedin.com/in/santosh-mehta-250120147/'><img src="santoshsinghmehta.github.io/images\download 3.jpg"/></a>
-						<a target='_blank' href='https://github.com/santoshsinghmehta'><img src="santoshsinghmehta.github.io/images\download 2.jpg" /></a>
+						<a target='_blank' href='https://www.facebook.com/santosh.mehta.50'> <img src="santoshsinghmehta.github.io/images\download.png"></a>
+						<a target='_blank' href='https://www.linkedin.com/in/santosh-mehta-250120147/'> <img src="santoshsinghmehta.github.io/images\download 3.jpg"></a>
+						<a target='_blank' href='https://github.com/santoshsinghmehta'> <img src="santoshsinghmehta.github.io/images\download 2.jpg" ></a>
 					</div>
 	 
        </header>
